[package]
name = "goxoy_litep2p"
version = "0.0.1"
edition = "2021"
authors = ["Omer GOKSOY <goksoy.omer@gmail.com>"]
description = "Goxoy Lite P2P Library"
license = "MIT"
keywords = ["p2p","peer-2-peer2","lite-p2p"]
#rust-version ="1.66.1"
repository = "https://github.com/Goxoy/goxoy_litep2p/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_derive = "1.0.158"
serde_json = "1.0"
md5 = "0.7.0"
colored = "2.1.0"
log = "0.4.22"
env_logger = "0.11.5"

